testsuite/tests/rename/should_fail/Misplaced.stderr

Misplaced.hs:4:1: error:
    Misplaced SourceText {-# SPECIALISE instance pragma:
    {-# SPECIALISE instance Eq (T Int) #-}
